# intro-led-rust

./: Cargo.toml  memory.x
mk02f12810/: Cargo.toml  device.x
mk02f12810/src/: dma.rs  dmamux.rs  ewm.rs  fmc.rs  ftfa.rs  ftfa_flash_config.rs  ftm0.rs  lib.rs  llwu.rs  mcg.rs  mcm.rs  osc.rs  pdb0.rs  portd.rs  porte.rs  rcm.rs  sim.rs  smc.rs
mk02f12810/src/cmp0/: muxcr.rs
mk02f12810/src/cmp1/: cr1.rs
mk02f12810/src/dac0/: c1.rs
mk02f12810/src/dma/: cdne.rs  ceei.rs  cerq.rs  cerr.rs  cint.rs  dchpri.rs  dma_tcd_biter_elinkyes.rs  dma_tcd_citer_elinkyes.rs  ears.rs  eei.rs  erq.rs  err.rs  es.rs  hrs.rs  int.rs  seei.rs  serq.rs  ssrt.rs  tcd_csr.rs
mk02f12810/src/dmamux/: chcfg.rs
mk02f12810/src/ewm/: clkprescaler.rs
mk02f12810/src/fmc/: pfb0cr.rs  pfb1cr.rs
mk02f12810/src/ftfa/: facsn.rs  facss.rs  fcnfg.rs  fsec.rs  fstat.rs  sacc.rs  xacc.rs
mk02f12810/src/ftfa_flash_config/: fopt.rs
mk02f12810/src/ftm1/: deadtime.rs  fms.rs
mk02f12810/src/ftm2/: csc.rs  exttrig.rs  sc.rs
mk02f12810/src/mcg/: c1.rs  c2.rs  c5.rs  c6.rs  c8.rs  s.rs
mk02f12810/src/mcm/: cpo.rs  iscr.rs  placr.rs  plamc.rs  plasc.rs
mk02f12810/src/osc/: div.rs
mk02f12810/src/pdb0/: chc1.rs  chs.rs  dacint.rs  dacintc.rs  poen.rs
mk02f12810/src/porta/: pcr.rs
mk02f12810/src/portb/: gpchr.rs
mk02f12810/src/portd/: dfer.rs  gpclr.rs
mk02f12810/src/porte/: isfr.rs  pcr.rs
mk02f12810/src/pta/: pddr.rs
mk02f12810/src/ptc/: pdir.rs  pdor.rs  psor.rs  ptor.rs
mk02f12810/src/pte/: pcor.rs
mk02f12810/src/rcm/: srs0.rs  srs1.rs  ssrs0.rs  ssrs1.rs
src/: main.rs
(+25 files in other folders)
