[package]
name = "mk02f12810"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m-rt = { version = "0.6.13", optional = true }
cortex-m = "0.7.7"
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
